--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ footer{background-color:red;}
 <header>
 <h1>Welcome to Delhi</h1>
 <h1> About Delhi: Delhi India’s capital territory is a massive metropolitan area in the country’s north. Delhi is of great historical significance as an important commercial, transport, and cultural hub, as well as the political centre of India.</h2>
-<img src="Delhi2.jpg" width="1500" height="600"></img>
+<img src="delhi2.jpg" width="1500" height="600"></img>
 </header>
 <section>
 <footer>
