--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ footer{background-color:red;}
 <h2>Top 5 Places to visit in Delhi</h2>
 <ol>
 <h2>Red fort</h2>
-<img src="Red Fort.jpg" width="300" height="200"></img>
+<img src="red2.jpg" width="300" height="200"></img>
 <h2>Qutb Minar</h2>
 <img src="Qutb Minar.jpg" width="300" height="200"></img>
 <h2>Humayun's Tomb</h2>
