--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ footer{background-color:red;}
 <br>
 <br>
 <h2>Chaat</h2>
-<img src="Chaat.jpg" width="300" height="200"></img>
+<img src="cha.jpg" width="300" height="200"></img>
 <br>
 <br>
 <h2>Paranthas</h2>
