--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ footer{background-color:red;}
 <h2>Paranthas</h2>
 <img src="paranthas2.jpg" width="300" height="200"></img>
 <h2>Biryani</h2>
-<img src="biryani.jpg" width="300" height="200"></img>
+<img src="bir.jpg" width="300" height="200"></img>
 <h2>Kebabs</h2>
 <img src="kebab.jpg" width="300" height="200"></img>
 <br>
