--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <style>
 header{background-color;text-align:center;}
-footer{background-color:red;}
+footer{background-color:light blue;}
 </style>
 </head>
 
