--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ footer{background-color:light blue;}
 <h2>Top 5 Places to visit in Delhi</h2>
 <ol>
 <h2>Red fort</h2>
+<h1>Named for its massive enclosing walls of red sandstone, it is adjacent to an older fort, the Salimgarh, built by Islam Shah Suri in 1546, with which it forms the Red Fort Complex.</h1>
 <img src="red2.jpg" width="300" height="200"></img>
 <h2>Qutb Minar</h2>
 <img src="Qutb Minar.jpg" width="300" height="200"></img>
