--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <style>
 header{background-color;text-align:center;}
-footer{background-color:light blue;}
+footer{background-color:red;}
 </style>
 </head>
 
@@ -19,40 +19,48 @@ footer{background-color:light blue;}
 <footer>
 <h2>Top 5 Places to visit in Delhi</h2>
 <ol>
-<h2>Red fort</h2>
+<h2>1. Red fort</h2>
 <h1>Named for its massive enclosing walls of red sandstone, it is adjacent to an older fort, the Salimgarh, built by Islam Shah Suri in 1546, with which it forms the Red Fort Complex.</h1>
 <img src="red2.jpg" width="300" height="200"></img>
-<h2>Qutb Minar</h2>
+<h2>2. Qutb Minar</h2>
+<h1> A minaret and "victory tower" that forms part of the Qutb complex, which lies at the site of Delhi’s oldest fortified city, Lal Kot, founded by the Tomar Rajputs. It is a UNESCO World Heritage Site in the Mehrauli area of South Delhi, India. </h1>
 <img src="Qutb Minar.jpg" width="300" height="200"></img>
-<h2>Humayun's Tomb</h2>
+<h2>3. Humayun's Tomb</h2>
+ <h1>It was the first garden-tomb on the Indian subcontinent. It inspired several major architectural innovations, culminating in the construction of the Taj Mahal.</h1>
 <img src="Humayun's tomb.jpg" width="300" height="200"></img>
-<h2>Hauz Khas Village</h2>
+<h2>4. Hauz Khas Village</h2>
+<h1>The Hauz Khas village has amazing buildings built around the reservoir. There are remnants of Islamic architecture roughly colored by splotches of urban culture.</h1>
 <img src="Huaz Khas.jpg" width="300" height="200"></img>
-<h2>India Gate</h2>
+<h2>5. India Gate</h2>
+<h1>It commemorates the 70,000 Indian soldiers who lost their lives fighting for the British Army during the World War I.</h1>
 <img src="India Gate.jpg" width="300" height="200"></img>
 <br>
 <br>
 </footer>
 <br>
 <br>
+<h1> Delhi is a melting pot of various cultures and races who enrich the variety of the gastronomic range in the city. And this is what makes Delhi famous for food!</h1>
+<br>
 <h2>Best foods from Delhi</h2> 
 <br>
 <br>
-<h2>Chaat</h2>
+<h2>1. Chaat</h2>
 <img src="cha.jpg" width="300" height="200"></img>
 <br>
 <br>
-<h2>Paranthas</h2>
+<h2>2. Paranthas</h2>
 <img src="paranthas2.jpg" width="300" height="200"></img>
-<h2>Biryani</h2>
+<h2>3. Biryani</h2>
 <img src="bir.jpg" width="300" height="200"></img>
-<h2>Kebabs</h2>
+<h2>4. Kebabs</h2>
 <img src="kebab.jpg" width="300" height="200"></img>
 <br>
 <br>
 </footer>
 <br>
 <br>
+<br>
+<h1> Delhi is not only a good place for holidays, but also for buisness, politics and a lots of meetings.That is why we need a good spot to relax and attend things with a calm mind.</h1>
 <br>
 <h2>Hotels in Delhi</h2>
 <br>
