--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <style>
 header{background-color;text-align:center;}
-footer{background-color:red;}
+footer{background-color:#F0E68C;}
 </style>
 </head>
 
-<body bgcolor="orange">
+<body bgcolor="#00FFFF">
 <div class="image"></div>
 <header>
 <h1>Welcome to Delhi</h1>
