--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ footer{background-color:#F0E68C;}
 <h2>Hotels in Delhi</h2>
 <br>
 <br>
-<h2>Taj Palace</h2>
+<h2>1. Taj Palace</h2>
 <img src="taj.jpg" width="300" height="200"></img>
-<h2>The Lalit</h2>
+<h2>2. The Lalit</h2>
 <img src="lalit.jpg" width="300" height="200"></img>
-<h2>Vivanta</h2>
+<h2>3. Vivanta</h2>
 <img src="vi.jpg" width="300" height="200"></img>
-<h2>The Roseate</h2>
+<h2>4. The Roseate</h2>
 <img src="rose.jpg" width="300" height="200"></img>
 </footer>
 <br>
