--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ footer{background-color:#F0E68C;}
 <h1>Welcome to Delhi</h1>
 <h1> About Delhi: Delhi, India’s capital territory is a massive metropolitan area in the country’s north. Delhi is of great historical significance as an important commercial, transport, and cultural hub, as well as the political centre of India.</h2>
 <img src="delhi2.jpg" width="1500" height="600"></img>
-<h1>History: Delhi has a long history, and has been an important political centre of India as the capital of several empires. Earliest coverage of Delhi's history is in the onset of the Tomar's kingdom in the 8th century.</h1>
-
+<h3>History: Delhi has a long history, and has been an important political centre of India as the capital of several empires. Earliest coverage of Delhi's history is in the onset of the Tomar's kingdom in the 8th century.Delhi has been a witness to the political turmoil for over five centuries. It was ruled by the Mughals in succession to Khiljis and Tughlaqs. </h3>
  </header>
 <section>
 <footer>
